sasql/tests/compile_fail/ddl_rejected.stderr
error: unsupported statement type: `create`. sasql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/ddl_rejected.rs:2:13
  |
2 |       let _ = sasql::query!(
  |  _____________^
3 | |         "CREATE TABLE should_not_work (id int)"
4 | |     );
  | |_____^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
